--- a/Makefile.mingw
+++ b/Makefile.mingw
@@ -29,6 +29,8 @@ dist:
 #	$(CP) $(GTKDOS)$(S)bin$(S)libiconv-2.dll inkscape
 	$(CP) $(GTKDOS)$(S)bin$(S)libpango-1.0-0.dll inkscape
 	$(CP) $(GTKDOS)$(S)bin$(S)libpangowin32-1.0-0.dll inkscape
+	$(CP) $(GTKDOS)$(S)bin$(S)freetype6.dll inkscape
+	$(CP) $(GTKDOS)$(S)bin$(S)libfontconfig-1.dll inkscape
 	$(CP) $(GTKDOS)$(S)bin$(S)libxml2-2.dll inkscape
 	$(CP) $(GTKDOS)$(S)bin$(S)jpeg62.dll inkscape
 	$(CP) $(GTKDOS)$(S)bin$(S)libpng12.dll inkscape
@@ -55,7 +57,7 @@ dist:
 	$(MAKE) -C po -f Makefile.mingw dist
 	$(MKDIR) inkscape$(S)modules
 	$(MKDIR) inkscape$(S)plugins
-	$(CP) src$(S)extension$(S)plugin$(S)*.dll inkscape$(S)plugins
+	-$(CP) src$(S)extension$(S)plugin$(S)*.dll inkscape$(S)plugins
 	@echo "##################### D O N E ####################"
 
 clean:
