--- a/configure.in
+++ b/configure.in
@@ -2,6 +2,11 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.50)
 AC_INIT(inkscape, 0.40cvs)
+dnl N.B. After 0.40, please change to `0.40+cvs' instead of `0.41cvs'.
+dnl Rationale: (i) placate simple version comparison software such as
+dnl `dpkg --compare-versions'.  (ii) We don't always know what the next
+dnl version is going to be called until about the time we release it
+dnl (whereas we always know what the previous version was called).
 AC_CANONICAL_HOST
 AC_CONFIG_SRCDIR(src/main.cpp)
 AM_INIT_AUTOMAKE
