--- a/src/dialogs/Makefile_insert
+++ b/src/dialogs/Makefile_insert
@@ -15,7 +15,9 @@ dialogs/clean:
 
 dialogs_libspdialogs_a_SOURCES = \
 	dialogs/docker.cpp	\
+	dialogs/docker.h	\
 	dialogs/dockable.cpp	\
+	dialogs/dockable.h	\
 	dialogs/align.cpp	\
 	dialogs/align.h	\
 	dialogs/debugdialog.cpp	\
