--- a/src/extension/implementation/Makefile_insert
+++ b/src/extension/implementation/Makefile_insert
@@ -17,4 +17,5 @@ extension_implementation_libimplementation_a_SOURCES =	\
 	extension/implementation/script.cpp	\
 	extension/implementation/script.h \
 	extension/implementation/plugin.cpp	\
-	extension/implementation/plugin.h
+	extension/implementation/plugin.h	\
+	extension/implementation/plugin-link.h
