--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -164,7 +164,7 @@ libinkpre_a_SOURCES =	\
 	text-context.cpp text-context.h	\
 	toolbox.cpp toolbox.h	\
 	tools-switch.cpp tools-switch.h\
-	trace.cpp trace.o \
+	trace.cpp trace.h	\
 	uri.cpp uri.h	\
 	uri-references.cpp uri-references.h	\
 	svg-profile.h \
