Move some things from sp-gradient.h to new files sp-gradient-fns.h sp-gradient-units.h sp-gradient-spread.h
(bzr r4162)

--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -116,8 +116,11 @@ libinkpre_a_SOURCES =	\
 	sp-desktop-widget.h	\
 	sp-ellipse.cpp sp-ellipse.h	\
 	sp-gradient.cpp sp-gradient.h	\
+	sp-gradient-fns.h	\
 	sp-gradient-reference.cpp	\
 	sp-gradient-reference.h	\
+	sp-gradient-spread.h	\
+	sp-gradient-units.h	\
 	sp-gradient-vector.h	\
 	sp-guide-attachment.h	\
 	sp-guide-constraint.h	\
