Add inkscape.pod and fix-roff-punct to tar file (EXTRA_DIST) to facilitate ppl sending patches to the man page.
(bzr r4171)

--- a/Makefile.am
+++ b/Makefile.am
@@ -22,12 +22,14 @@ man_MANS = inkscape.1 \
 		inkview.1
 
 EXTRA_DIST = \
+	fix-roff-punct	\
 	intltool-extract.in	\
 	intltool-merge.in	\
 	intltool-update.in	\
 	mkinstalldirs		\
 	$(Graphics_in_files)	\
 	inkscape.1		\
+	inkscape.pod		\
 	inkscape.spec.in	\
 	inkscape.spec		\
 	README HACKING		\
