--- a/src/libnr/Makefile_insert
+++ b/src/libnr/Makefile_insert
@@ -35,6 +35,7 @@ libnr_libnr_a_SOURCES =	\
 	libnr/nr-matrix-fns.cpp	\
 	libnr/nr-matrix-fns.h	\
 	libnr/nr-matrix-ops.h	\
+	libnr/nr-matrix-scale-ops.cpp	\
 	libnr/nr-matrix-scale-ops.h	\
 	libnr/nr-matrix-translate-ops.h	\
 	libnr/nr-matrix.cpp	\
