added pov example
(bzr r4190)

--- a/share/examples/Makefile.am
+++ b/share/examples/Makefile.am
@@ -3,6 +3,7 @@ exampledir = $(datadir)/inkscape/examples
 
 example_DATA = \
 	README \
+	istest.pov \
 	gradient.svg \
 	tiger.svgz \
 	markers.svg \
