--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -46,6 +46,7 @@ libinkpre_a_SOURCES =	\
 	desktop.cpp desktop.h	\
 	desktop-events.cpp desktop-events.h	\
 	desktop-handles.cpp desktop-handles.h	\
+	desktop-style.cpp desktop-style.h	\
 	snap.cpp snap.h	\
 	desktop-units.h	\
 	dir-util.cpp dir-util.h	\
