Splitting out the different types of extensions into their own files so that the overall dependencies can be reduced.  Caused a ripple through lots of other files.  Hopefully the dependency situation is better now.
(bzr r4374)

--- a/src/extension/Makefile_insert
+++ b/src/extension/Makefile_insert
@@ -15,7 +15,19 @@ extension_libextension_a_SOURCES =	\
 	extension/extension-forward.h	\
 	extension/db.cpp	\
 	extension/db.h	\
+	extension/dependency.cpp \
+	extension/dependency.h \
 	extension/init.cpp	\
 	extension/init.h	\
 	extension/system.cpp	\
-	extension/system.h
+	extension/system.h \
+	\
+	extension/input.h \
+	extension/input.cpp \
+	extension/output.h \
+	extension/output.cpp \
+	extension/effect.h \
+	extension/effect.cpp \
+	extension/print.h \
+	extension/print.cpp
+
