fix: main.o and extension/internal/ps.o require inkscape_version.h.
(bzr r4484)

--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -239,8 +239,10 @@ all_libs =	\
 
 desktop.$(OBJEXT): helper/sp-marshal.h
 document.$(OBJEXT): helper/sp-marshal.h inkscape_version.h
+extension/internal/ps.$(OBJEXT): inkscape_version.h
 inkscape.$(OBJEXT): helper/sp-marshal.h inkscape_version.h
 knot.$(OBJEXT): helper/sp-marshal.h
+main.$(OBJEXT): inkscape_version.h
 selection.$(OBJEXT): helper/sp-marshal.h
 sp-object.$(OBJEXT): helper/sp-marshal.h
 view.$(OBJEXT): helper/sp-marshal.h
