layer selector and layer template
(bzr r4493)

--- a/share/templates/Makefile.am
+++ b/share/templates/Makefile.am
@@ -2,6 +2,8 @@
 templatesdir = $(datadir)/inkscape/templates
 
 templates_DATA = \
-	README
+	README \
+	default.svg \
+	layers.svg
 
 EXTRA_DIST = $(templates_DATA)
