libnr/in-svg-plane-test: new test
(bzr r4555)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -104,6 +104,7 @@ TESTS =	\
 	sp-gradient-test$(EXEEXT)	\
 	display/bezier-utils-test$(EXEEXT)	\
 	helper/units-test$(EXEEXT)	\
+	libnr/in-svg-plane-test$(EXEEXT)	\
 	libnr/nr-matrix-test$(EXEEXT)	\
 	libnr/nr-point-fns-test$(EXEEXT)	\
 	libnr/nr-rotate-test$(EXEEXT)	\
@@ -124,6 +125,7 @@ check_PROGRAMS =	\
 	sp-gradient-test	\
 	display/bezier-utils-test	\
 	helper/units-test	\
+	libnr/in-svg-plane-test	\
 	libnr/nr-matrix-test	\
 	libnr/nr-point-fns-test	\
 	libnr/nr-rotate-test	\
